factor: 응답시간 확인